src/main/antlr/GrammarParser.java
// Generated from /shared/YandexDisk/ITMO/year2019/mt/TranslatorGenerator/src/main/antlr/Grammar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SkipRule=1, GRAMMAR=2, FRAGMENT=3, SKIP_=4, LPARENTHESIS=5, RPARENTHESIS=6, 
		LBRACKET=7, RBRACKET=8, LBRACE=9, RBRACE=10, APOSTROPHE=11, SEMICOLON=12, 
		COLON=13, OR=14, QUESTION=15, STAR=16, PLUS=17, ARROW=18, LSIGN=19, GSIGN=20, 
		WS=21, PARSER_IDENTIFIER=22, LEXER_IDENTIFIER=23, Identifier=24, CountMark=25, 
		InheritedRules=26, SemanticRules=27, LexerLiteral=28;
	public static final int
		RULE_grammar_ = 0, RULE_rule_ = 1, RULE_parsingRule = 2, RULE_parsingAtom = 3, 
		RULE_parsingRuleOptions = 4, RULE_lexingRule = 5, RULE_lexingAtom = 6, 
		RULE_lexingRuleOptions = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"grammar_", "rule_", "parsingRule", "parsingAtom", "parsingRuleOptions", 
			"lexingRule", "lexingAtom", "lexingRuleOptions"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'grammar'", "'fragment'", "'skip'", "'('", "')'", "'['", 
			"']'", "'{'", "'}'", "'''", "';'", "':'", "'|'", "'?'", "'*'", "'+'", 
			"'->'", "'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SkipRule", "GRAMMAR", "FRAGMENT", "SKIP_", "LPARENTHESIS", "RPARENTHESIS", 
			"LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "APOSTROPHE", "SEMICOLON", 
			"COLON", "OR", "QUESTION", "STAR", "PLUS", "ARROW", "LSIGN", "GSIGN", 
			"WS", "PARSER_IDENTIFIER", "LEXER_IDENTIFIER", "Identifier", "CountMark", 
			"InheritedRules", "SemanticRules", "LexerLiteral"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Grammar_Context extends ParserRuleContext {
		public TerminalNode GRAMMAR() { return getToken(GrammarParser.GRAMMAR, 0); }
		public TerminalNode LEXER_IDENTIFIER() { return getToken(GrammarParser.LEXER_IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public TerminalNode SemanticRules() { return getToken(GrammarParser.SemanticRules, 0); }
		public List<Rule_Context> rule_() {
			return getRuleContexts(Rule_Context.class);
		}
		public Rule_Context rule_(int i) {
			return getRuleContext(Rule_Context.class,i);
		}
		public Grammar_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammar_; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitGrammar_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Grammar_Context grammar_() throws RecognitionException {
		Grammar_Context _localctx = new Grammar_Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammar_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			match(GRAMMAR);
			setState(17);
			match(LEXER_IDENTIFIER);
			setState(18);
			match(SEMICOLON);
			setState(20);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SemanticRules) {
				{
				setState(19);
				match(SemanticRules);
				}
			}

			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SkipRule) | (1L << PARSER_IDENTIFIER) | (1L << LEXER_IDENTIFIER))) != 0)) {
				{
				{
				setState(22);
				rule_();
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_Context extends ParserRuleContext {
		public ParsingRuleContext parsingRule() {
			return getRuleContext(ParsingRuleContext.class,0);
		}
		public LexingRuleContext lexingRule() {
			return getRuleContext(LexingRuleContext.class,0);
		}
		public TerminalNode SkipRule() { return getToken(GrammarParser.SkipRule, 0); }
		public Rule_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitRule_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rule_Context rule_() throws RecognitionException {
		Rule_Context _localctx = new Rule_Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_rule_);
		try {
			setState(31);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PARSER_IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				parsingRule();
				}
				break;
			case LEXER_IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(29);
				lexingRule();
				}
				break;
			case SkipRule:
				enterOuterAlt(_localctx, 3);
				{
				setState(30);
				match(SkipRule);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParsingRuleContext extends ParserRuleContext {
		public TerminalNode PARSER_IDENTIFIER() { return getToken(GrammarParser.PARSER_IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(GrammarParser.COLON, 0); }
		public ParsingRuleOptionsContext parsingRuleOptions() {
			return getRuleContext(ParsingRuleOptionsContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public ParsingRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parsingRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitParsingRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParsingRuleContext parsingRule() throws RecognitionException {
		ParsingRuleContext _localctx = new ParsingRuleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parsingRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(PARSER_IDENTIFIER);
			setState(34);
			match(COLON);
			setState(35);
			parsingRuleOptions();
			setState(36);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParsingAtomContext extends ParserRuleContext {
		public TerminalNode PARSER_IDENTIFIER() { return getToken(GrammarParser.PARSER_IDENTIFIER, 0); }
		public TerminalNode InheritedRules() { return getToken(GrammarParser.InheritedRules, 0); }
		public TerminalNode SemanticRules() { return getToken(GrammarParser.SemanticRules, 0); }
		public TerminalNode LEXER_IDENTIFIER() { return getToken(GrammarParser.LEXER_IDENTIFIER, 0); }
		public TerminalNode LPARENTHESIS() { return getToken(GrammarParser.LPARENTHESIS, 0); }
		public ParsingAtomContext parsingAtom() {
			return getRuleContext(ParsingAtomContext.class,0);
		}
		public TerminalNode RPARENTHESIS() { return getToken(GrammarParser.RPARENTHESIS, 0); }
		public ParsingAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parsingAtom; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitParsingAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParsingAtomContext parsingAtom() throws RecognitionException {
		ParsingAtomContext _localctx = new ParsingAtomContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parsingAtom);
		int _la;
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PARSER_IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				match(PARSER_IDENTIFIER);
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==InheritedRules) {
					{
					setState(39);
					match(InheritedRules);
					}
				}

				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SemanticRules) {
					{
					setState(42);
					match(SemanticRules);
					}
				}

				}
				break;
			case LEXER_IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				match(LEXER_IDENTIFIER);
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==InheritedRules) {
					{
					setState(46);
					match(InheritedRules);
					}
				}

				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SemanticRules) {
					{
					setState(49);
					match(SemanticRules);
					}
				}

				}
				break;
			case LPARENTHESIS:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				match(LPARENTHESIS);
				setState(53);
				parsingAtom();
				setState(54);
				match(RPARENTHESIS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParsingRuleOptionsContext extends ParserRuleContext {
		public List<ParsingAtomContext> parsingAtom() {
			return getRuleContexts(ParsingAtomContext.class);
		}
		public ParsingAtomContext parsingAtom(int i) {
			return getRuleContext(ParsingAtomContext.class,i);
		}
		public TerminalNode OR() { return getToken(GrammarParser.OR, 0); }
		public ParsingRuleOptionsContext parsingRuleOptions() {
			return getRuleContext(ParsingRuleOptionsContext.class,0);
		}
		public ParsingRuleOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parsingRuleOptions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitParsingRuleOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParsingRuleOptionsContext parsingRuleOptions() throws RecognitionException {
		ParsingRuleOptionsContext _localctx = new ParsingRuleOptionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parsingRuleOptions);
		int _la;
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(58);
					parsingAtom();
					}
					}
					setState(61); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPARENTHESIS) | (1L << PARSER_IDENTIFIER) | (1L << LEXER_IDENTIFIER))) != 0) );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(64); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(63);
					parsingAtom();
					}
					}
					setState(66); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPARENTHESIS) | (1L << PARSER_IDENTIFIER) | (1L << LEXER_IDENTIFIER))) != 0) );
				setState(68);
				match(OR);
				setState(69);
				parsingRuleOptions();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexingRuleContext extends ParserRuleContext {
		public TerminalNode LEXER_IDENTIFIER() { return getToken(GrammarParser.LEXER_IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(GrammarParser.COLON, 0); }
		public LexingRuleOptionsContext lexingRuleOptions() {
			return getRuleContext(LexingRuleOptionsContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammarParser.SEMICOLON, 0); }
		public LexingRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexingRule; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitLexingRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LexingRuleContext lexingRule() throws RecognitionException {
		LexingRuleContext _localctx = new LexingRuleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lexingRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(LEXER_IDENTIFIER);
			setState(74);
			match(COLON);
			setState(75);
			lexingRuleOptions();
			setState(76);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexingAtomContext extends ParserRuleContext {
		public TerminalNode LexerLiteral() { return getToken(GrammarParser.LexerLiteral, 0); }
		public TerminalNode CountMark() { return getToken(GrammarParser.CountMark, 0); }
		public TerminalNode LEXER_IDENTIFIER() { return getToken(GrammarParser.LEXER_IDENTIFIER, 0); }
		public TerminalNode LPARENTHESIS() { return getToken(GrammarParser.LPARENTHESIS, 0); }
		public LexingAtomContext lexingAtom() {
			return getRuleContext(LexingAtomContext.class,0);
		}
		public TerminalNode RPARENTHESIS() { return getToken(GrammarParser.RPARENTHESIS, 0); }
		public LexingAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexingAtom; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitLexingAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LexingAtomContext lexingAtom() throws RecognitionException {
		LexingAtomContext _localctx = new LexingAtomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lexingAtom);
		int _la;
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RPARENTHESIS:
			case SEMICOLON:
			case OR:
			case CountMark:
			case LexerLiteral:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LexerLiteral) {
					{
					setState(78);
					match(LexerLiteral);
					}
				}

				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CountMark) {
					{
					setState(81);
					match(CountMark);
					}
				}

				}
				break;
			case LEXER_IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(LEXER_IDENTIFIER);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CountMark) {
					{
					setState(85);
					match(CountMark);
					}
				}

				}
				break;
			case LPARENTHESIS:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				match(LPARENTHESIS);
				setState(89);
				lexingAtom();
				setState(90);
				match(RPARENTHESIS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LexingRuleOptionsContext extends ParserRuleContext {
		public LexingAtomContext lexingAtom() {
			return getRuleContext(LexingAtomContext.class,0);
		}
		public TerminalNode OR() { return getToken(GrammarParser.OR, 0); }
		public LexingRuleOptionsContext lexingRuleOptions() {
			return getRuleContext(LexingRuleOptionsContext.class,0);
		}
		public LexingRuleOptionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexingRuleOptions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitLexingRuleOptions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LexingRuleOptionsContext lexingRuleOptions() throws RecognitionException {
		LexingRuleOptionsContext _localctx = new LexingRuleOptionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lexingRuleOptions);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				lexingAtom();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				lexingAtom();
				setState(96);
				match(OR);
				setState(97);
				lexingRuleOptions();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}